egonlang-core/res/examples/invalid/const_decl_in_grouping_parans.eg
(const a = 123;);

// out: SyntaxError: unexpected "const"; expected: ["\"!\"", "\"(\"", "\")\"", "\"-\"", "\"..\"", "\"[\"", "\"false\"", "\"if\"", "\"true\"", "\"{\"", "identifier", "number", "string"]
// out: SyntaxError: unexpected ")"; expected: ["\"!\"", "\"(\"", "\"-\"", "\"..\"", "\"[\"", "\"const\"", "\"false\"", "\"if\"", "\"let\"", "\"true\"", "\"{\"", "\"}\"", "identifier", "number", "string"]